- Scrollbar ändert angezeigtes Spielfeld. - Eventlistener zusammengefasst.