@@ -6,8 +6,6 @@ import knight.model.Engine;
 
 import javax.swing.*;
 import java.awt.*;
-import java.time.Duration;
-import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
 
@@ -16,12 +14,9 @@ import static knight.ui.Model.Mode.*;
 
 public class Main {
 
-    private JFrame frame;
     private BoardPane boardPane;
-    private StatusPane statusPane;
-    private ControlPane controlPane;
 
-    private Model model = new Model();
+    private final Model model = new Model();
 
     private Engine engine;
 
@@ -32,11 +27,11 @@ public class Main {
     }
 
     private void createFrame() {
-        frame = new JFrame("Knights");
+        JFrame frame = new JFrame("Knights");
         frame.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
         frame.setPreferredSize(new Dimension(640, 640));
         frame.setMinimumSize(new Dimension(360, 360));
-        frame.setJMenuBar(new Menu(model, menuActions()));
+        frame.setJMenuBar(new Menu(model, listener()));
         frame.setContentPane(createContent());
         frame.pack();
         frame.setVisible(true);
@@ -47,15 +42,15 @@ public class Main {
         JPanel content = new JPanel(new BorderLayout());
         boardPane = new BoardPane(model);
         content.add(boardPane, BorderLayout.CENTER);
-        statusPane = new StatusPane(model);
+        StatusPane statusPane = new StatusPane(model);
         content.add(statusPane, BorderLayout.SOUTH);
-        controlPane = new ControlPane(model, events());
+        ControlPane controlPane = new ControlPane(model, listener());
         content.add(controlPane, BorderLayout.NORTH);
         return content;
     }
 
-    private Menu.MenuActions menuActions() {
-        return new Menu.MenuActions() {
+    private Listener listener() {
+        return new Listener() {
             @Override
             public void onReset() {
                 if (model.getMode() == RUN) {
@@ -66,39 +61,24 @@ public class Main {
             }
 
             @Override
-            public void onStartStop() {
-                if (model.getMode() == RUN) {
-                    stop(VIEW);
-                } else if (model.getMode() == SET) {
-                    start();
-                }
-            }
-
-            @Override
-            public void onShow() {
-            }
-
-            @Override
-            public void onQuit() {
-                System.exit(0);
-            }
-        };
-    }
-    private ControlPane.Events events() {
-        return new ControlPane.Events() {
-            @Override
             public void onStart() {
+
                 start();
             }
 
             @Override
             public void onStop() {
-                stop(SET);
+                stop(VIEW);
             }
 
             @Override
             public void onShow() {
                 boardPane.animate();
+            }
+
+            @Override
+            public void onQuit() {
+                System.exit(0);
             }
         };
     }
@@ -112,25 +92,20 @@ public class Main {
 
     private void run(Engine engine, int x, int y) {
         List<Board> boards = engine.solve(x, y) //
-                .collect(toList());
+                .toList();
         boards.stream().findFirst().
                 map(Board::getMoves).ifPresent(this::animate);
     }
 
     private void start() {
         model.setMode(RUN);
-        statusPane.setStatus(0, 0);
-        statusPane.setInfo("Zeit (s): 0");
         new SwingWorker<List<Board>, Board>() {
-
-            private int solutions = 0;
-            private LocalDateTime startTime = LocalDateTime.now();
-
             @Override
-            protected List<Board> doInBackground() throws Exception {
+            protected List<Board> doInBackground() {
                 engine = new Engine(model.getBoard(), model.getThreadCount());
                 List<Board> boards = engine.solve(model.getStartPosition().x(), model.getStartPosition().y()) //
-                        .peek(this::solution)
+                        .peek(this::publish)
+                        .limit(1000000)
                         .collect(toList());
                 model.setBoards(boards);
                 return boards;
@@ -138,10 +113,9 @@ public class Main {
 
             @Override
             protected void process(List<Board> boards) {
+                model.setMoves(engine.moves());
+                model.setSolutions(engine.solutions());
                 model.setBoard(boards.get(0));
-                statusPane.setStatus(engine.moves(), engine.solutions());
-                statusPane.setInfo(String.format("Zeit (s): %d",
-                        Duration.between(startTime, LocalDateTime.now()).getSeconds()));
             }
 
             @Override
@@ -149,20 +123,11 @@ public class Main {
                 synchronized (nextMode) {
                     if (nextMode.isEmpty() || nextMode.get() == VIEW) {
                         model.setMode(VIEW);
-                        statusPane.setStatus(engine.moves(), engine.solutions());
-                        statusPane.setInfo(String.format("Zeit (s): %d",
-                                Duration.between(startTime, LocalDateTime.now()).getSeconds()));
                     } else {
                         model.setMode(SET);
                     }
                     engine = null;
                     nextMode = Optional.empty();
-                }
-            }
-
-            private void solution(Board board) {
-                if (solutions++ % 100 == 0) {
-                    publish(board);
                 }
             }
         }.execute();
@@ -177,8 +142,8 @@ public class Main {
         }
     }
 
-    private void start(String args[]) {
-        int size_x = 5, size_y = 5, x = 0, y = 0;
+    private void start(String[] args) {
+        int size_x, size_y, x = 0, y = 0;
         if (args.length > 0) {
             if (args[0].matches("\\dx\\d")) {
                 size_x = Integer.parseInt(String.valueOf(args[0].charAt(0)));
@@ -192,12 +157,11 @@ public class Main {
             }
             Engine engine = new Engine(new Dim(size_x, size_y));
             run(engine, x, y);
-        } else {
-            //  animate(MODEL);
-        }
+        }  //  animate(MODEL);
+
     }
 
-    public static void main(String args[]) {
+    public static void main(String[] args) {
         Main main = new Main();
         main.start(args);
     }
